Add tool path direction to surfacing operation.