@@ -24,36 +24,49 @@ import static com.willwinder.ugs.nbp.designer.entities.EntitySetting.DEFAULT_LAS
 import static com.willwinder.ugs.nbp.designer.entities.EntitySetting.DEFAULT_POCKET_SETTINGS;
 import static com.willwinder.ugs.nbp.designer.entities.EntitySetting.DEFAULT_SURFACE_SETTINGS;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
  * @author Joacim Breiler
  */
 public enum CutType {
-    NONE("None", List.of(EntitySetting.CUT_TYPE)),
-    POCKET("Mill - Pocket",  DEFAULT_POCKET_SETTINGS),
-    SURFACE("Mill - Surface",  DEFAULT_SURFACE_SETTINGS),
-    ON_PATH("Mill - On path", DEFAULT_ENDMILL_SETTINGS),
-    INSIDE_PATH("Mill - Inside path",  DEFAULT_ENDMILL_SETTINGS),
-    OUTSIDE_PATH("Mill - Outside path", DEFAULT_ENDMILL_SETTINGS),
-    LASER_ON_PATH("Laser - On path", DEFAULT_LASER_SETTINGS),
-    LASER_FILL("Laser - Fill", DEFAULT_LASER_SETTINGS),
-    CENTER_DRILL("Center drill", DEFAULT_ENDMILL_SETTINGS),
+    NONE("None", List.of(EntitySetting.CUT_TYPE), Collections.emptyList()),
+    POCKET("Mill - Pocket", DEFAULT_POCKET_SETTINGS, List.of(Direction.CLIMB, Direction.CONVENTIONAL)),
+    SURFACE("Mill - Surface", DEFAULT_SURFACE_SETTINGS, List.of(Direction.CLIMB, Direction.CONVENTIONAL, Direction.BOTH)),
+    ON_PATH("Mill - On path", DEFAULT_ENDMILL_SETTINGS, Collections.emptyList()),
+    INSIDE_PATH("Mill - Inside path", DEFAULT_ENDMILL_SETTINGS, Collections.emptyList()),
+    OUTSIDE_PATH("Mill - Outside path", DEFAULT_ENDMILL_SETTINGS, Collections.emptyList()),
+    LASER_ON_PATH("Laser - On path", DEFAULT_LASER_SETTINGS, Collections.emptyList()),
+    LASER_FILL("Laser - Fill", DEFAULT_LASER_SETTINGS, Collections.emptyList()),
+    CENTER_DRILL("Center drill", DEFAULT_ENDMILL_SETTINGS, Collections.emptyList()),
     ;
 
     private final String name;
 
     private final List<EntitySetting> settings;
+    private final List<Direction> directions;
 
-    CutType(String name, List<EntitySetting> settings) {
+    CutType(String name, List<EntitySetting> settings, List<Direction> directions) {
         this.name = name;
         this.settings = settings;
+        this.directions = directions;
     }
 
     public String getName() {
         return name;
     }
+
     public List<EntitySetting> getSettings() {
         return settings;
+    }
+
+    /**
+     * Get supported directions for this cut type
+     *
+     * @return a list of supported directions
+     */
+    public List<Direction> getDirections() {
+        return directions;
     }
 }
